Java 16 migration for REST examples.
See #606.